# MindFull

./: .env  .env.example  docker-compose.yml  mindfull_backend_architecture.md  settings.gradle.kts  test_jwt.py  verify_fix.py
backend/: Dockerfile  Dockerfile.celery  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  eb1a46af8998_add_remaining_domains.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  events.py  exceptions.py  logger.py  redis.py  security.py
backend/app/db/: base.py  base_repository.py  session.py
backend/app/domain/analytics/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/education/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/forest/: __init__.py  engine.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/gamification/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/greenmap/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/organizations/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domain/prompt_coach/: __init__.py  models.py  (+4 more)
backend/app/middleware/: __init__.py  audit_log.py  device_fingerprint.py  rate_limit.py  request_id.py  tenant_context.py
backend/app/workers/: tasks.py
backend/scripts/: generate_token.py  make_admin.py  seed_users.py
backend/tests/: conftest.py  test_auth.py
(+112 files in other folders)
