[tool.poetry]
name = "mindfull-backend"
version = "0.1.0"
description = "Backend for Mindfull"
authors = ["Admin <admin@mindfull.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
alembic = "^1.13.1"
celery = "^5.4.0"
redis = "^5.0.6"
pyjwt = "^2.8.0"
structlog = "^24.2.0"
prometheus-fastapi-instrumentator = "^7.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
